文字化けが直りません。

--- a/src/MessageResources_ja.properties
+++ b/src/MessageResources_ja.properties
@@ -46,3 +46,6 @@ welcome.message=To get started on your own application, copy the struts-blank.wa
 # -- buttons --
 button.submit=Submit
 button.top=Top
+button.ok=OK
+# -- fields --
+field.userName=name
