--- a/WebContent/WEB-INF/classes/MessageResources_ja_JP.properties
+++ b/WebContent/WEB-INF/classes/MessageResources_ja_JP.properties
@@ -38,6 +38,7 @@ errors.cancel=Operation cancelled.
 errors.detail={0}
 errors.general=The process did not complete. Details should follow.
 errors.token=Request could not be completed. Operation is not in sequence.
+errors.register=Registration failed.
 # -- welcome --
 welcome.title=Struts Blank Application
 welcome.heading=Welcome!
@@ -46,6 +47,6 @@ welcome.message=To get started on your own application, copy the struts-blank.wa
 button.submit=Submit
 button.ok=OK
 # -- field --
-field.userName=name
+field.userName=Name
 # -- success --
 success.register=Registration completed.
