--- a/WebContent/WEB-INF/classes/MessageResources_ja_JP.properties
+++ b/WebContent/WEB-INF/classes/MessageResources_ja_JP.properties
@@ -39,6 +39,7 @@ errors.detail={0}
 errors.general=The process did not complete. Details should follow.
 errors.token=Request could not be completed. Operation is not in sequence.
 errors.register=Registration failed.
+errors.search=No search results.
 # -- welcome --
 welcome.title=Struts Blank Application
 welcome.heading=Welcome!
@@ -46,6 +47,7 @@ welcome.message=To get started on your own application, copy the struts-blank.wa
 # -- button --
 button.submit=Submit
 button.ok=OK
+button.search=Search
 # -- field --
 field.userName=Name
 # -- success --
