--- a/WebContent/WEB-INF/classes/MessageResources_ja_JP.properties
+++ b/WebContent/WEB-INF/classes/MessageResources_ja_JP.properties
@@ -34,6 +34,8 @@ errors.short={0} must be an short.
 errors.creditcard={0} is not a valid credit card number.
 errors.email={0} is an invalid e-mail address.
 # -- other --
+errors.eisuji={0} must be Eisuji.
+errors.zenkaku={0} must be Japanese Zenkaku.
 errors.cancel=Operation cancelled.
 errors.detail={0}
 errors.general=The process did not complete. Details should follow.
@@ -52,5 +54,9 @@ button.ok=OK
 button.search=Search
 # -- field --
 field.userName=Name
+field.loginId=Login ID
+field.password=Password
+field.icon=Icon
+field.profile=Profile
 # -- success --
 complete.register=Registration completed.
