--- a/WebContent/WEB-INF/classes/MessageResources_ja_JP.properties
+++ b/WebContent/WEB-INF/classes/MessageResources_ja_JP.properties
@@ -35,12 +35,13 @@ errors.creditcard={0} is not a valid credit card number.
 errors.email={0} is an invalid e-mail address.
 # -- other --
 errors.eisuji={0} must be Eisuji.
-errors.zenkaku={0} must be Japanese Zenkaku.
+errors.zenkaku={0} must be Zenkaku.
 errors.cancel=Operation cancelled.
 errors.detail={0}
 errors.general=The process did not complete. Details should follow.
 errors.token=Request could not be completed. Operation is not in sequence.
 errors.register=Registration failed.
+errors.search=Input the conditions to search.
 null.search=No search results.
 # -- welcome --
 welcome.title=Struts Blank Application
