--- a/WebContent/WEB-INF/classes/MessageResources_ja_JP.properties
+++ b/WebContent/WEB-INF/classes/MessageResources_ja_JP.properties
@@ -42,6 +42,7 @@ errors.general=The process did not complete. Details should follow.
 errors.token=Request could not be completed. Operation is not in sequence.
 errors.register=Registration failed.
 errors.search=Input the conditions to search.
+errors.loginId=This Login ID exist.
 null.search=No search results.
 # -- welcome --
 welcome.title=Struts Blank Application
